--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,174 @@
+/* fonts  */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+
+/*===== Variable css =====*/
+:root {
+  /*===== Colors =====*/
+
+  --first-color: #069c54;
+  --first-color-alt: #048654;
+  --title-color: #292f59;
+  --title-color2:#4642FF;
+  --text-color: #7c7c7c;
+  --body-color: #fbfefd;
+  --container-color: #fff;
+  --mainWhite: #f5f5f5;
+  --tomatoColor:#ff6347;
+  /*  Gradient colors  */
+  --gradient-1: linear-gradient(to bottom right, rgb(107, 107, 255), blue);
+  --gradient-2: linear-gradient(
+    to bottom right,
+    rgb(80, 80, 255),
+    rgb(253, 119, 119)
+  );
+  --gradient-3: linear-gradient(
+    to bottom right,
+    rgb(255, 207, 145),
+    rgb(255, 111, 92)
+  );
+  --gradient-4: linear-gradient(to bottom right, #2af598, #009efd);
+
+  /*===== Fonts =====*/
+
+  --body-font: "Poppins", sans-serif;
+
+  --biggest-font-size: 2.25rem;
+  --h1-font-size: 1.5rem;
+  --h2-font-size: 1.25rem;
+  --h3-font-size: 1rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.838rem;
+  --smaller-font-size: 0.75rem;
+
+  /*========== Font weight ==========*/
+  --font-medium: 500;
+  --font-semi-bold: 600;
+
+  /*========== Margin ==========*/
+
+  --mb-1: 0.5rem;
+  --mb-2: 1rem;
+  --mb-3: 1.5rem;
+  --mb-4: 2rem;
+  --mb-5: 2.5rem;
+  --mb-6: 3rem;
+  /*========== z index ==========*/
+}
+@media screen and (min-width: 768px) {
+  :root {
+    --biggest-font-size: 4rem;
+    --h1-font-size: 2.25rem;
+    --h2-font-size: 1.5rem;
+    --h3-font-size: 1.2rem;
+    --normal-font-size: 1rem;
+    --small-font-size: 0.838rem;
+    --smaller-font-size: 0.75rem;
+  }
+}
+/*========== Base ==========*/
+
 *,
 ::after,
-::before{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+::before {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+body {
+  font-family: var(--body-font);
+}
+h1 {
+  color: var(--title-color);
+}
+p {
+  color: var(--text-color);
+}
+a {
+  text-decoration: none;
+  color: var(--mainWhite);
+}
+ul {
+  list-style: none;
+}
+/* button */
+.cta {
+    padding: 0.6rem 1.1rem;
+    background:var(--gradient-3);
+    border-radius: 50px;
+    transition: .7s;
+}
+.cta:hover{
+   background: linear-gradient(
+    to bottom right,
+    rgb(255, 111, 92),
+    rgb(255, 207, 145)
+  );
+}
+.btn {
+    padding:0.6rem 1.1rem;
+    border: 1px solid var(--tomatoColor);
+    border-radius: 50px;
+    color: var(--tomatoColor);
+    margin-right: 2rem;
+    transition: 1s ;
+}
+.btn:hover{
+    background: var(--gradient-3);
+    border: none;
+    color: var(--mainWhite);
+}
+/*========== header ==========*/
+header {
+  background-image: url(../images/header-bg.png);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  background-size: cover;
+  object-fit: contain;
+}
+.navbar {
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 2% 6%;
+}
+.nav__list {
+  text-align: right;
+}
+.navbar ul li {
+  display: inline-block;
+  margin: 0 1.2rem;
+}
+.navbar ul li a {
+  color: var(--mainWhite);
+}
+.logo {
+  width: 150px;
+}
+.row {
+  display: flex;
+  align-items: center;
+  padding-top: 5rem;
+}
+.header__content,.hero__img{
+    flex-basis: 50%;
+    padding: 5rem;
+}
+.hero__img img{
+    margin-left: 5rem;
+}
+.header__content h1 {
+    text-transform: capitalize;
+    /* line-height: 1.5; */
+    font-weight: var(--font-medium);
+    font-size: 7vmin;
+    color: var(--title-color2);
+    margin-bottom: var(--mb-2);
+    margin-top: 10rem;
+}
+.header__content p {
+    margin-bottom: var(--mb-3);
+    font-size:var(--normal-font-size)
 }
