--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,13 @@
   --first-color: #069c54;
   --first-color-alt: #048654;
   --title-color: #292f59;
-  --title-color2:#4642FF;
+  --title-color2: #4642ff;
   --text-color: #7c7c7c;
+  --darkGrey: #2f4f4f;
   --body-color: #fbfefd;
   --container-color: #fff;
   --mainWhite: #f5f5f5;
-  --tomatoColor:#ff6347;
+  --tomatoColor: #ff6347;
   /*  Gradient colors  */
   --gradient-1: linear-gradient(to bottom right, rgb(107, 107, 255), blue);
   --gradient-2: linear-gradient(
@@ -92,30 +93,30 @@ ul {
 }
 /* button */
 .cta {
-    padding: 0.6rem 1.1rem;
-    background:var(--gradient-3);
-    border-radius: 50px;
-    transition: .7s;
+  padding: 0.6rem 1.1rem;
+  background: var(--gradient-3);
+  border-radius: 50px;
+  transition: 0.7s;
 }
-.cta:hover{
-   background: linear-gradient(
+.cta:hover {
+  background: linear-gradient(
     to bottom right,
     rgb(255, 111, 92),
     rgb(255, 207, 145)
   );
 }
 .btn {
-    padding:0.6rem 1.1rem;
-    border: 1px solid var(--tomatoColor);
-    border-radius: 50px;
-    color: var(--tomatoColor);
-    margin-right: 2rem;
-    transition: 1s ;
+  padding: 0.6rem 1.1rem;
+  border: 1px solid var(--tomatoColor);
+  border-radius: 50px;
+  color: var(--tomatoColor);
+  margin-right: 2rem;
+  transition: 1s;
 }
-.btn:hover{
-    background: var(--gradient-3);
-    border: none;
-    color: var(--mainWhite);
+.btn:hover {
+  background: var(--gradient-3);
+  border: none;
+  color: var(--mainWhite);
 }
 /*========== header ==========*/
 header {
@@ -126,8 +127,6 @@ header {
   object-fit: contain;
 }
 .navbar {
-  position: fixed;
-  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -152,23 +151,112 @@ header {
   align-items: center;
   padding-top: 5rem;
 }
-.header__content,.hero__img{
-    flex-basis: 50%;
-    padding: 5rem;
+.header__content,
+.hero__img {
+  flex-basis: 50%;
+  padding: 5rem;
 }
-.hero__img img{
-    margin-left: 5rem;
+.hero__img img {
+  margin-left: 5rem;
 }
 .header__content h1 {
-    text-transform: capitalize;
-    /* line-height: 1.5; */
-    font-weight: var(--font-medium);
-    font-size: 7vmin;
-    color: var(--title-color2);
-    margin-bottom: var(--mb-2);
-    margin-top: 10rem;
+  text-transform: capitalize;
+  /* line-height: 1.5; */
+  font-weight: var(--font-medium);
+  font-size: 7vmin;
+  color: var(--title-color2);
+  margin-bottom: var(--mb-2);
+  margin-top: 10rem;
 }
 .header__content p {
-    margin-bottom: var(--mb-3);
-    font-size:var(--normal-font-size)
+  margin-bottom: var(--mb-3);
+  font-size: var(--normal-font-size);
+}
+/*========== Services ==========*/
+.services {
+  /* flex-basis: 60%; */
+  margin-top: 6rem;
+}
+.container {
+  padding: 3rem;
+  display: flex;
+}
+.grid-wrapper,
+.services__content {
+  flex-basis: 50%;
+}
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+  grid-gap: 2em;
+  padding: 2rem;
+}
+.grid-box {
+  margin: 0.7rem;
+  height: 200px;
+  padding: 2rem;
+  text-align: center;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.438);
+  border-radius: 5px;
+}
+.grid-box img {
+  width: 80px;
+  height: 80px;
+  margin-bottom: 20px;
+  animation: scaleUp 6s ease-in-out infinite;
+
+}
+.grid-box h1 {
+  color: var(--mainWhite);
+  font-weight: var(--font-medium);
+}
+.mobileapp {
+  background: var(--gradient-1);
+}
+.webdesign {
+  background: var(--gradient-2);
+  margin-top: var(--mb-4);
+}
+.marketing {
+  background: var(--gradient-3);
+}
+.branding {
+  background: var(--gradient-4);
+  margin-top: var(--mb-4);
+
+}
+.services__content {
+  padding: 3rem;
+  position: relative;
+}
+.services__content h1 {
+  font-size: 6vmin;
+  margin-bottom: var(--mb-3);
+  text-transform: capitalize;
+  font-weight: 500;
+}
+.services__content p {
+  padding-right: 9rem;
+  margin-bottom: var(--mb-3);
+}
+.circle img {
+  position: absolute;
+  top: -10%;
+  left: -12%;
+  width: 650px;
+  z-index: -2;
+  animation: scaleUp 6s ease-in-out infinite;
+
+}
+/* animation */
+@keyframes scaleUp{
+    0%{
+        transform:scale(1.2)
+    }
+    50%{
+        transform:scale(1)
+    }
+    100%{
+        transform:scale(1.2)
+    }
 }
