--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,6 @@ header {
   height: 80px;
   margin-bottom: 20px;
   animation: scaleUp 6s ease-in-out infinite;
-
 }
 .grid-box h1 {
   color: var(--mainWhite);
@@ -223,7 +222,6 @@ header {
 .branding {
   background: var(--gradient-4);
   margin-top: var(--mb-4);
-
 }
 .services__content {
   padding: 3rem;
@@ -246,71 +244,121 @@ header {
   width: 650px;
   z-index: -2;
   animation: scaleUp 6s ease-in-out infinite;
-
 }
 /*========== Numbers ==========*/
 .numbers {
-    margin-top: 8rem;
+  margin-top: 8rem;
 }
 .numbers__title {
-    font-size:3rem;
-    padding-left: 5rem;
-    padding-right: 50%;
-    font-weight: 500;
-    margin-bottom: var(--mb-2);
-    text-transform: capitalize;
+  font-size: 3rem;
+  padding-left: 5rem;
+  padding-right: 50%;
+  font-weight: 500;
+  margin-bottom: var(--mb-2);
+  text-transform: capitalize;
 }
 .numbers__subtitle {
-    padding-left: 5rem;
-    padding-right: 50%;
+  padding-left: 5rem;
+  padding-right: 50%;
 }
 .mockup__img {
-    flex-basis: 50%;
+  flex-basis: 50%;
 }
-.mockup__img img{
-    max-width: 100%;
-    object-fit: contain;
-    margin: auto 1.1rem;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.487);
+.mockup__img img {
+  max-width: 100%;
+  object-fit: contain;
+  margin: auto 1.1rem;
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.487);
 }
 .one {
-    background: var(--gradient-1);
+  background: var(--gradient-1);
 }
 .two {
-    background: var(--gradient-2);
+  background: var(--gradient-2);
 }
-.three{
-    background: var(--gradient-3);
+.three {
+  background: var(--gradient-3);
 }
 .four {
-    background: var(--gradient-4);
+  background: var(--gradient-4);
 }
 .numbers .grid-box {
-    transition: 1s;
+  transition: 1s;
 }
 .numbers .grid-box h2 {
-    color: var(--mainWhite);
-    font-weight: 400;
-    margin-top: var(--mb-3);
-    font-size: 1.1rem;
+  color: var(--mainWhite);
+  font-weight: 400;
+  margin-top: var(--mb-3);
+  font-size: 1.1rem;
 }
 .numbers .grid-box h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
-.numbers .grid-box:hover{
-    transform:translateY(-30px);
+.numbers .grid-box:hover {
+  transform: translateY(-30px);
 }
-/* animation */
-@keyframes scaleUp{
-    0%{
-        transform:scale(1.2)
-    }
-    50%{
-        transform:scale(1)
-    }
-    100%{
-        transform:scale(1.2)
-    }
+/*========== Projects ==========*/
+.projects {
+  margin-top: 6rem;
+  text-align: center;
+}
+.projects h1 {
+    font-size:2.5rem;
+    font-weight:500;
+}
+.projects__images {
+  padding: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, auto));
+}
+.project__img {
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+}
+.project__img img {
+  max-height: 100%;
+  min-width: 100%;
+}
+.details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  transition: 0.8s;
+  cursor: pointer;
+  opacity: 0;
 }
 
+.details:hover {
+  background: rgba(0, 0, 255, 0.7);
+  opacity:1;
+}
+
+.details h1,
+h2,
+i {
+  color: var(--mainWhite);
+}
+
+.details i {
+  font-size: 1.8rem;
+}
+/* animation */
+@keyframes scaleUp {
+  0% {
+    transform: scale(1.2);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
