--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
   --title-color: #292f59;
   --title-color2: #4642ff;
   --text-color: #7c7c7c;
+  --lightGrey:#808080;
   --darkGrey: #2f4f4f;
   --body-color: #fbfefd;
   --container-color: #fff;
@@ -349,6 +350,59 @@ i {
 
 .details i {
   font-size: 1.8rem;
+}
+/*========== Team Member ==========*/
+.team {
+    margin-top: 6rem;
+    text-align: center;
+}
+.team h1 {
+    font-size:2.5rem;
+    font-weight:500;
+    margin-bottom: var(--mb-3);
+}
+.grid-wrapper {
+    background: var(--gradient-2);
+    padding-top: 4rem;
+}
+.team__member{
+    background: #fff;
+    height:400px;
+    border-radius:8px;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    transition:.8s;
+    cursor: pointer;
+}
+.team__member:hover{
+    transform: translateY(-20px);
+}
+.team__member img {
+    width:80px;
+    border-radius: 50%;
+}
+.team__member h1 {
+    font-weight: 400;
+    font-size: 2.1rem;
+    text-transform: capitalize;
+}
+.team__member h2 {
+    color: var(--lightGrey);
+    text-transform: capitalize;
+    font-weight: 400;
+}
+.team__member i {
+    color:var(--lightGrey);
+    margin-right: 0.5rem;
+    font-size: 1.3rem;
+    transition:0.5s;
+    cursor: pointer;
+}
+.team__member i:hover{
+    color: #000;
+    transform:scale(1.1)
 }
 /* animation */
 @keyframes scaleUp {
