--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,7 +361,7 @@ i {
     font-weight:500;
     margin-bottom: var(--mb-3);
 }
-.grid-wrapper {
+.team .grid-wrapper {
     background: var(--gradient-2);
     padding-top: 4rem;
 }
@@ -403,6 +403,46 @@ i {
 .team__member i:hover{
     color: #000;
     transform:scale(1.1)
+}
+/*========== testimonials ==========*/
+.testimonials{
+  margin-top: 6rem;
+}
+.testimonials__title {
+  font-size: 2.5rem;
+  padding-left: 5rem;
+  text-transform: capitalize;
+  margin-bottom: var(--mb-2);
+
+}
+.testimonials__subtitle {
+  padding-left: 5rem;
+  padding-right: 50%;
+  overflow: hidden;
+}
+.testimonials .grid-wrapper {
+  padding: 3rem;
+}
+.review {
+  min-height: 400px;
+}
+.review .profile {
+  display: flex;
+  margin-bottom: 2rem;
+  align-items: center;
+}
+.review .profile img{
+  width:100px;
+  border-radius: 50%;
+  margin-right: 1.1rem;
+}
+.review p {
+  padding-left:4.5rem ;
+}
+.review  i {
+  font-size: 30px;
+  color: var(--lightGrey);
+  margin-bottom: 3rem;
 }
 /* animation */
 @keyframes scaleUp {
